{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 235,
  "lineage": "14139669-6bbc-2dbe-d9ac-162c26bb2c04",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-2:846551934641:transit-gateway/tgw-03b1608b4e9961f3d",
            "association_default_route_table_id": "tgw-rtb-0a53bce6e82c9c40f",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "transit gateway to connect 2 vpc's",
            "dns_support": "enable",
            "id": "tgw-03b1608b4e9961f3d",
            "multicast_support": "disable",
            "owner_id": "846551934641",
            "propagation_default_route_table_id": "tgw-rtb-0a53bce6e82c9c40f",
            "tags": {
              "Name": "transit-gw"
            },
            "tags_all": {
              "Name": "transit-gw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-vpc-app-attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0719f7fef135cbc15",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-090444ca636533c16",
              "subnet-0d1c5b232d26b1013"
            ],
            "tags": {
              "Name": "tgw-app-vpc-attachment"
            },
            "tags_all": {
              "Name": "tgw-app-vpc-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-03b1608b4e9961f3d",
            "vpc_id": "vpc-0d9be81befe64f9de",
            "vpc_owner_id": "846551934641"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg",
            "aws_subnet.private-2a",
            "aws_subnet.private-2b",
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-vpc-bastion-attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0391159ac73b5b10d",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0ef062f13de994c7f"
            ],
            "tags": {
              "Name": "tgw-bastion-vpc-attachement"
            },
            "tags_all": {
              "Name": "tgw-bastion-vpc-attachement"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-03b1608b4e9961f3d",
            "vpc_id": "vpc-00bed4adda74b2819",
            "vpc_owner_id": "846551934641"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg",
            "aws_subnet.bastion-subnet",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-061b27e9790ca79d5",
            "arn": "arn:aws:ec2:us-east-2:846551934641:elastic-ip/eipalloc-061b27e9790ca79d5",
            "association_id": "eipassoc-0ca4bb205a62fa199",
            "domain": "vpc",
            "id": "eipalloc-061b27e9790ca79d5",
            "instance": "i-07f2f95882e2b353b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0abb5ed870aa71642",
            "private_dns": "ip-192-168-0-247.us-east-2.compute.internal",
            "private_ip": "192.168.0.247",
            "public_dns": "ec2-3-139-17-210.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.17.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion-sg",
            "aws_subnet.bastion-subnet",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "e-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0981a1fcea2e84b56",
            "arn": "arn:aws:ec2:us-east-2:846551934641:elastic-ip/eipalloc-0981a1fcea2e84b56",
            "association_id": "eipassoc-098525f0cf33b1f49",
            "domain": "vpc",
            "id": "eipalloc-0981a1fcea2e84b56",
            "network_border_group": "us-east-2",
            "network_interface": "eni-034f806b4ffb20553",
            "private_dns": "ip-172-32-0-53.us-east-2.compute.internal",
            "private_ip": "172.32.0.53",
            "public_dns": "ec2-3-132-84-126.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.84.126",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a9cbae439fc918db",
            "arn": "arn:aws:ec2:us-east-2:846551934641:instance/i-07f2f95882e2b353b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f2f95882e2b353b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ohio-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abb5ed870aa71642",
            "private_dns": "ip-192-168-0-247.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.247",
            "public_ip": "3.139.17.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053915a54e19b92df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef062f13de994c7f",
            "tags": {
              "Name": "Bastion-host"
            },
            "tags_all": {
              "Name": "Bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a38fa453cc3112bf"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_subnet.bastion-subnet",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "maven",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b141ef9655809443",
            "arn": "arn:aws:ec2:us-east-2:846551934641:instance/i-0bbb8e3562c218a06",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbb8e3562c218a06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ohio-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a25291e59babd522",
            "private_dns": "ip-172-32-2-173.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.32.2.173",
            "public_ip": "18.226.248.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090cfd5205c81048a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1c5b232d26b1013",
            "tags": {
              "Name": "maven"
            },
            "tags_all": {
              "Name": "maven"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a127108eca33e59"
            ]
          },
          "dependencies": [
            "aws_security_group.maven-sg",
            "aws_subnet.private-2a",
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:internet-gateway/igw-06f9e21e1586e49cb",
            "id": "igw-06f9e21e1586e49cb",
            "owner_id": "846551934641",
            "tags": {
              "Name": "igw-vpc1"
            },
            "tags_all": {
              "Name": "igw-vpc1"
            },
            "vpc_id": "vpc-00bed4adda74b2819"
          },
          "dependencies": [
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:internet-gateway/igw-0753e5f76344d0c4a",
            "id": "igw-0753e5f76344d0c4a",
            "owner_id": "846551934641",
            "tags": {
              "Name": "igw-vpc2"
            },
            "tags_all": {
              "Name": "igw-vpc2"
            },
            "vpc_id": "vpc-0d9be81befe64f9de"
          },
          "dependencies": [
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0981a1fcea2e84b56",
            "association_id": "eipassoc-098525f0cf33b1f49",
            "connectivity_type": "public",
            "id": "nat-0113beb9eee22a22a",
            "network_interface_id": "eni-034f806b4ffb20553",
            "private_ip": "172.32.0.53",
            "public_ip": "3.132.84.126",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f7242bf7f044a4af",
            "tags": {
              "Name": "gw NAT-vpc2"
            },
            "tags_all": {
              "Name": "gw NAT-vpc2"
            }
          },
          "dependencies": [
            "aws_eip.e-ip",
            "aws_internet_gateway.igw-vpc2",
            "aws_subnet.public-2a",
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-tgw-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01f44f2a4f49edad13901788224",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f44f2a4f49edad1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-03b1608b4e9961f3d",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tg",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-vpc2-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:route-table/rtb-08f2a5e0c8dd6de46",
            "id": "rtb-08f2a5e0c8dd6de46",
            "owner_id": "846551934641",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0113beb9eee22a22a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-vpc2-nat"
            },
            "tags_all": {
              "Name": "rt-vpc2-nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9be81befe64f9de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.e-ip",
            "aws_internet_gateway.igw-vpc2",
            "aws_nat_gateway.nat-vpc2",
            "aws_subnet.public-2a",
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:route-table/rtb-02a934407838f0f54",
            "id": "rtb-02a934407838f0f54",
            "owner_id": "846551934641",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.32.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-03b1608b4e9961f3d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-06f9e21e1586e49cb",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "vpc1-rt"
            },
            "tags_all": {
              "Name": "vpc1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bed4adda74b2819"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tg",
            "aws_internet_gateway.igw-vpc1",
            "aws_vpc.app-servers",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:route-table/rtb-01e5a89713597beb9",
            "id": "rtb-01e5a89713597beb9",
            "owner_id": "846551934641",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-03b1608b4e9961f3d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0753e5f76344d0c4a",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "vpc2-rt"
            },
            "tags_all": {
              "Name": "vpc2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9be81befe64f9de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tg",
            "aws_internet_gateway.igw-vpc2",
            "aws_vpc.app-servers",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-vpc2-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0841ef53ed5a87cba",
            "route_table_id": "rtb-08f2a5e0c8dd6de46",
            "subnet_id": "subnet-0f7242bf7f044a4af"
          },
          "dependencies": [
            "aws_eip.e-ip",
            "aws_internet_gateway.igw-vpc2",
            "aws_nat_gateway.nat-vpc2",
            "aws_route_table.rt-vpc2-nat",
            "aws_subnet.public-2a",
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc1-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a26a245522a42154",
            "route_table_id": "rtb-02a934407838f0f54",
            "subnet_id": "subnet-0ef062f13de994c7f"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg",
            "aws_internet_gateway.igw-vpc1",
            "aws_route_table.vpc1-rt",
            "aws_subnet.bastion-subnet",
            "aws_vpc.app-servers",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc2-rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb8ea4587f4ded9b",
            "route_table_id": "rtb-01e5a89713597beb9",
            "subnet_id": "subnet-0d6bd82a4bec18449"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg",
            "aws_internet_gateway.igw-vpc2",
            "aws_route_table.vpc2-rt",
            "aws_subnet.public-2b",
            "aws_vpc.app-servers",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:security-group/sg-0a38fa453cc3112bf",
            "description": "sg for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a38fa453cc3112bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "846551934641",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bed4adda74b2819"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "maven-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:security-group/sg-02a127108eca33e59",
            "description": "sg for maven",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a127108eca33e59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "maven-sg",
            "name_prefix": "",
            "owner_id": "846551934641",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "maven-sg"
            },
            "tags_all": {
              "Name": "maven-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9be81befe64f9de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:subnet/subnet-0ef062f13de994c7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef062f13de994c7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846551934641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-bastion"
            },
            "tags_all": {
              "Name": "pub-subnet-bastion"
            },
            "vpc_id": "vpc-00bed4adda74b2819"
          },
          "dependencies": [
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:subnet/subnet-0d1c5b232d26b1013",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.32.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1c5b232d26b1013",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846551934641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-subnet2a"
            },
            "tags_all": {
              "Name": "pvt-subnet2a"
            },
            "vpc_id": "vpc-0d9be81befe64f9de"
          },
          "dependencies": [
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:subnet/subnet-090444ca636533c16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.32.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090444ca636533c16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846551934641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-subnet2b"
            },
            "tags_all": {
              "Name": "pvt-subnet2b"
            },
            "vpc_id": "vpc-0d9be81befe64f9de"
          },
          "dependencies": [
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:subnet/subnet-0f7242bf7f044a4af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.32.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7242bf7f044a4af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846551934641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet2a"
            },
            "tags_all": {
              "Name": "pub-subnet2a"
            },
            "vpc_id": "vpc-0d9be81befe64f9de"
          },
          "dependencies": [
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:subnet/subnet-0d6bd82a4bec18449",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.32.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6bd82a4bec18449",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846551934641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet2b"
            },
            "tags_all": {
              "Name": "pub-subnet2b"
            },
            "vpc_id": "vpc-0d9be81befe64f9de"
          },
          "dependencies": [
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:vpc/vpc-0d9be81befe64f9de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-010703e329eba6c4d",
            "default_route_table_id": "rtb-01f44f2a4f49edad1",
            "default_security_group_id": "sg-09b5d7265a83121a9",
            "dhcp_options_id": "dopt-05f183c8fc93f40d9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9be81befe64f9de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f44f2a4f49edad1",
            "owner_id": "846551934641",
            "tags": {
              "Name": "application-servers"
            },
            "tags_all": {
              "Name": "application-servers"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:vpc/vpc-00bed4adda74b2819",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-029a962aab546b03a",
            "default_route_table_id": "rtb-0ac308b0b429f2318",
            "default_security_group_id": "sg-0fd3ef9ab8c0f4097",
            "dhcp_options_id": "dopt-05f183c8fc93f40d9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00bed4adda74b2819",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac308b0b429f2318",
            "owner_id": "846551934641",
            "tags": {
              "Name": "bastion-host-vpc"
            },
            "tags_all": {
              "Name": "bastion-host-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:security-group-rule/sgr-0ecb7467af05e5339",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ecb7467af05e5339",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a38fa453cc3112bf",
            "security_group_rule_id": "sgr-0ecb7467af05e5339",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_outbound_maven-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:security-group-rule/sgr-0874e898a084759c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0874e898a084759c5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02a127108eca33e59",
            "security_group_rule_id": "sgr-0874e898a084759c5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.maven-sg",
            "aws_vpc.app-servers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:security-group-rule/sgr-07966c17a883ad7ba",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07966c17a883ad7ba",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a38fa453cc3112bf",
            "security_group_rule_id": "sgr-07966c17a883ad7ba",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:security-group-rule/sgr-084086c07642eb26b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-084086c07642eb26b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a38fa453cc3112bf",
            "security_group_rule_id": "sgr-084086c07642eb26b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_shh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:security-group-rule/sgr-0502a192a68e6db52",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0502a192a68e6db52",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a38fa453cc3112bf",
            "security_group_rule_id": "sgr-0502a192a68e6db52",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_vpc.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_shh_maven",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846551934641:security-group-rule/sgr-03120f84f124a73dd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03120f84f124a73dd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02a127108eca33e59",
            "security_group_rule_id": "sgr-03120f84f124a73dd",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.maven-sg",
            "aws_vpc.app-servers"
          ]
        }
      ]
    }
  ]
}